added qr code scan for device pair

--- a/android-side/android_ui.html
+++ b/android-side/android_ui.html
@@ -264,6 +264,7 @@
     <input id="name-input" type="text" placeholder="PC name (optional)" />
     <button class="tb-btn primary" onclick="confirmPair()" style="width:240px;padding:14px">Pair</button>
     <span id="pair-msg"></span>
+    <button class="tb-btn" onclick="Android.startQrScan()">Scan QR</button>
   </div>
 
   <!-- Stream view -->
